# OZCDS-BEBC

./: README.md
DATABASE-Study/Day02/: DBMS-task_02.ipynb
Django-Study/Day01/: db.sqlite3  pyproject.toml
Django-Study/Day01/config/: settings.py  urls.py
Django-Study/Day01/feeds/: urls.py  views.py
Django-Study/Day02/: readme.md
Django-Study/Day02/membership/: db.sqlite3  manage.py
Django-Study/Day02/membership/accounts/: admin.py  models.py
Django-Study/Day02/membership/accounts/migrations/: 0001_initial.py
Django-Study/Day02/membership/common/: models.py
Django-Study/Day02/membership/membership_project/: asgi.py  settings.py  urls.py  wsgi.py
GIT-Study/Day01/: .gitignore  oz_back.yaml  oz_fullstack.yaml
GIT-Study/Day02/: oz_back.yaml  oz_fullstack.yaml  oz_service.yaml
HTML-CSS-Study/: class_1.ipynb  class_2.ipynb  class_3.ipynb  class_4.ipynb  class_5.ipynb
HTML-CSS-Study/Day01/: day01 task_profile.html
HTML-CSS-Study/Day02/: day02 task_form.html
HTML-CSS-Study/Day03/: day03 task_profile.css  day03 task_profile.html
HTML-CSS-Study/Day04/: day04-task_mychat.css  day04-task_mychat.html
JAVASCRIPT-Study/Day01/: day01-js-task_user.html
JAVASCRIPT-Study/Day02/: day02-js-task_monstergame.html
JAVASCRIPT-Study/Day03/: day03-js-task_join.css  day03-js-task_join.html  day03-js-task_join.js
LINUX-Study/Day01/: linux_task01.ipynb
LINUX-Study/Day02/: linux_task02.ipynb
PYTHON-Study/Day01/: day01-python-task.ipynb
